welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:52: error: value Nord is not a member of object plm.universe.Direction
  if((getDirection()==Direction.Nord)&&(estFaceMur())){
                                ^