welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  do{	
  	snake()
  	} while (!estFaceMur())
  	right()
}

def snake(){
  	
  	while(!estFaceMur()){
    	avance()
  	}
  	if (getDirection()== Direction.EST){
    	left()
    	if(!estFaceMur())
    	avance()
  	}
  	if (getDirection()== Direction.OUEST){
    	right()
    	if (!estFaceMur())
    	avance()
  	}
  right()
  if(estFaceMur()){
    right()
    right()
  }  
}

def posf():Boolean ={
  if(getDirection== Direction.OUEST){
    right()
    right()
  	if(estFaceMur()){
    	left()
    	if(estFaceMur()){
      	right()
      	return true
    	}
  	}
  }
  if(getDirection()==Direction.EST){
    if(estFaceMur()){
      left()
      if(estFaceMur()){
        right()
        return true
      }
    }
  }
  if((getDirection()==Direction.Nord)&&(estFaceMur())){
    right()
    if(estFaceMur()){
      return true
    }
    
  }
  	return false
  }